updated to include github address i am a strange loop

--- a/Cyclospora.html
+++ b/Cyclospora.html
@@ -79,7 +79,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <section class="main-content">
 <div id="cyclospora" class="section level2">
 <h2>Cyclospora</h2>
-<p>Cyclosporiasis is an intestinal sickness caused by the coccidian parasite <em>Cyclospora cayetanensis</em>. An outbreak in 2017 seemingly from Mexican cilantro has affected many people, and the Texas public health board and CDC put out some of the data publically. I wanted to go through this data, make choropleth plots for the counties affected (because I am unfamiliar with Texan counties) and plot out the data. This was also prompted because I ate some cilantro and immediately went into hypochondriac mode.</p>
+<p>Cyclosporiasis is an intestinal sickness caused by the coccidian parasite <em>Cyclospora cayetanensis</em>. An outbreak in 2017 seemingly from Mexican cilantro has affected many people, and the Texas public health board and CDC put out some of the data publically. I wanted to go through this data, make choropleth plots for the counties affected (because I am unfamiliar with Texan counties) and plot out the data. This was also prompted because I ate some cilantro and immediately went into hypochondriac mode. You can find the code for this post at <a href="https://github.com/robchoudhury/TexasCyclospora" class="uri">https://github.com/robchoudhury/TexasCyclospora</a></p>
 <p>Lets get into it!</p>
 </div>
 <div id="epi-curves-in-texas" class="section level2">
